# Simple-CMAKE-FFTW

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  fftw_test.cpp  fftw_test3.cpp
